# bootstreep-dashboard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  package.json  refactor_csp.py  replace.py
.github/workflows/: ci.yml  release.yml  web-dashboard-ci.yml
.zed/: settings.json
docs/audit/: 2026-06-20-REPORT.md
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  path_sandbox.rs
web-dashboard/: app.py  requirements.txt
