[package]
name = "bootstreep-dashboard"
version = "2.6.2"
edition = "2021"

[lib]
name = "bootstreep_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
# Performance 2026-06-20: drop `full` (brings in net/io/uds/test-util) and
# declare only the features we actually use. Cuts build time ~30%.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
    "sync",
    "io-util",
] }
portable-pty = "0.8"
dirs = "5"
shlex = "1"

[features]
# Convenience flag for development builds; enables ssh-keyscan auto-trust.
# NEVER enable this in production.
ssh-auto-trust = []

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

